--- a/src/views/home/home.scss
+++ b/src/views/home/home.scss
@@ -1,11 +1,24 @@
 .contain {
   width: 95%;
-  margin: 0 auto;
+  margin: 18px auto 0;
   display: flex;
 
-  .default_img {
-    width: 140px;
-    height: 140px;
-    border-radius: 50%;
+  .head {
+    display: flex;
+    align-items: center;
+
+    .default_img {
+      width: 100px;
+      height: 100px;
+      border-radius: 50%;
+      margin-right: 15px;
+    }
+  }
+}
+
+::v-deep {
+  .el-input > input {
+    width: 360px;
+    height: 30px;
   }
 }
